--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,53 @@
 {
-  "name": "mvc/pattern",
-  "license": "MIT",
-  "description": "MVC Pattern",
-  "authors": [
-    {
-      "name": "kas-cor",
-      "email": "kascorp@gmail.com"
-    }
-  ],
-  "require": {
-    "twbs/bootstrap": ">=4.3.1 <5.0.0",
-    "components/jquery": ">=3.3.1 <4.0.0",
-    "doctrine/orm": ">=2.6.3 <3.0.0",
-    "robmorgan/phinx": ">=0.10.7 <0.11.0"
-  }
+    "name": "kas-cor/mvc-pattern",
+    "license": "MIT",
+    "description": "MVC Pattern",
+    "authors": [
+        {
+            "name": "kas-cor",
+            "email": "kascorp@gmail.com"
+        }
+    ],
+    "require": {
+        "php": ">=7.2.0",
+        "doctrine/orm": "^2.6.3",
+        "robmorgan/phinx": "^0.10.8",
+        "npm-asset/normalize.css": "^8.0.1",
+        "bower-asset/bootstrap": "^4.3.1",
+        "bower-asset/jquery": "^3.4.1",
+        "vlucas/phpdotenv": "^3.4.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "app\\": "app/"
+        },
+        "classmap": [
+            "db/migrations",
+            "db/seeds"
+        ]
+    },
+    "scripts": {
+        "post-root-package-install": [
+            "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
+        ]
+    },
+    "config": {
+        "optimize-autoloader": true,
+        "sort-packages": true,
+        "process-timeout": 1800,
+        "fxp-asset": {
+            "enabled": false
+        }
+    },
+    "extra": {
+        "asset-installer-paths": {
+            "bower-asset-library": "vendor/bower-asset"
+        }
+    },
+    "repositories": [
+        {
+            "type": "composer",
+            "url": "https://asset-packagist.org"
+        }
+    ]
 }
