--- a/.editorconfig
+++ b/.editorconfig
@@ -3,16 +3,27 @@ root = true
 [*]
 charset = utf-8
 end_of_line = lf
-insert_final_newline = true
-indent_style = space
 indent_size = 4
-trim_trailing_whitespace = true
+indent_style = space
+insert_final_newline = false
+max_line_length = 120
+tab_width = 4
 
-[*.md]
-trim_trailing_whitespace = false
-
-[*.yml]
+[*.less]
 indent_size = 2
 
-[composer.json]
+[*.sass]
+indent_size = 2
+
+[*.scss]
+indent_size = 2
+
+[{*.cjsx,*.coffee}]
+indent_size = 2
+tab_width = 2
+
+[{*.yml,*.yaml}]
+indent_size = 2
+
+[{.prettierrc,.stylelintrc,.eslintrc,.babelrc,jest.config,*.json,*.bowerrc,*.jsb3,*.jsb2}]
 indent_size = 2
