--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,11 @@
     "psr-4": {
       "app\\": "app/"
     },
+    "autoload-dev": {
+      "psr-4": {
+        "Tests\\": "tests/"
+      }
+    },
     "classmap": [
       "db/migrations",
       "db/seeds"
@@ -60,5 +65,8 @@
       "type": "composer",
       "url": "https://asset-packagist.org"
     }
-  ]
+  ],
+  "require-dev": {
+    "phpunit/phpunit": "^8.3"
+  }
 }
