--- a/composer.json
+++ b/composer.json
@@ -26,21 +26,25 @@
     "doctrine/orm": "^2.6.3",
     "npm-asset/normalize.css": "^8.0.1",
     "robmorgan/phinx": "^0.10.8",
+    "sentry/sdk": "2.0.3",
     "vlucas/phpdotenv": "^3.4.0"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^8.3.4"
   },
   "autoload": {
     "psr-4": {
       "app\\": "app/"
     },
-    "autoload-dev": {
-      "psr-4": {
-        "Tests\\": "tests/"
-      }
-    },
     "classmap": [
       "db/migrations",
       "db/seeds"
     ]
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "tests\\": "tests/"
+    }
   },
   "scripts": {
     "post-install-cmd": [
@@ -65,8 +69,5 @@
       "type": "composer",
       "url": "https://asset-packagist.org"
     }
-  ],
-  "require-dev": {
-    "phpunit/phpunit": "^8.3"
-  }
+  ]
 }
